<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    tools:context=".Auth.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/aa" />
    </LinearLayout>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_alignParentBottom="true"
       android:layout_centerHorizontal="true"
       android:layout_marginBottom="32dp">
       <Button
           android:id="@+id/logbutton"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="70dp"
           android:paddingRight="70dp"
           android:layout_marginBottom="16dp"
           android:layout_gravity="center"
           android:background="@drawable/bt_bg"
           android:textColor="@color/white"
           android:textAllCaps="true"
           android:textSize="16sp"
           android:text="@string/log_in"
           android:fontFamily="sans-serif-medium" />
       <Button
           android:id="@+id/googleSignIn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="4dp"
           android:text="@string/googleSigning"
           android:fontFamily="sans-serif-medium"
           android:paddingLeft="50dp"
           android:paddingRight="50dp"
           android:background="@drawable/bt_bg"
           android:textColor="@color/white"
           android:textAllCaps="false"
           android:textSize="16sp" />
   </LinearLayout>

</RelativeLayout>