<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/aa"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-dark"
        android:padding="8dp"
        android:text="@string/sign_up1"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:id="@+id/Name"
                android:background="@drawable/et_bg"
                android:fontFamily="sans-serif-light"
                android:hint="NAME"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="15sp" />



            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/et_bg"
                android:fontFamily="sans-serif-light"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:id="@+id/e"/>



            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/et_bg"
                android:fontFamily="sans-serif-light"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:id="@+id/pass"/>



            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/et_bg"
                android:fontFamily="sans-serif-light"
                android:hint="Retype password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:id="@+id/repass"/>



            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/et_bg"
                android:fontFamily="sans-serif-light"
                android:hint="Year"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:id="@+id/Year"/>



            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/et_bg"
                android:fontFamily="sans-serif-light"
                android:hint="Department"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:id="@+id/dep"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/et_bg"
                android:fontFamily="sans-serif-light"
                android:hint="Title"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:id="@+id/title"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:background="@drawable/bt_bg"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:id="@+id/submit"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@color/transparent"
                android:fontFamily="sans-serif-light"
                android:layout_gravity="center"
                android:text="@string/already_have_account_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:onClick="toIn"/>
        </LinearLayout>
    </ScrollView>



</LinearLayout>

