<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context=".Auth.Signup2Activity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/scroll">
        <ImageView
            android:id="@+id/logo1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/aa"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/text_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-dark"
            android:padding="8dp"
            android:text="@string/sign_up1"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/Name_google"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/et_bg"
                android:fontFamily="sans-serif-light"
                android:hint="NAME"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="15sp" />



            <EditText
                android:id="@+id/Year_google"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/et_bg"
                android:fontFamily="sans-serif-light"
                android:hint="Year"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                />



            <EditText
                android:id="@+id/department_google"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/et_bg"
                android:fontFamily="sans-serif-light"
                android:hint="Department"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/title_google"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/et_bg"
                android:fontFamily="sans-serif-light"
                android:hint="Title"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scroll"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <Button
            android:id="@+id/submit_google"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:background="@drawable/bt_bg"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_gravity="center" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:fontFamily="sans-serif-light"
            android:layout_gravity="center"
            android:text="@string/already_have_account_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:onClick="toIn"/>
    </LinearLayout>



</RelativeLayout>
